<resources>
    <string name="app_name">BrewBuddy</string>

    <!-- Navigation -->
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav_bar_text">Home</string>
    <string name="drink_menu_nav_bar_text">Drink Menu</string>
    <string name="order_nav_bar_text">Your Order</string>
    <string name="favorites_nav_bar_text">Favorites</string>
    <string name="main_menu_help_item">Help</string>
    <string name="main_menu_settings_item">Settings</string>
    <string name="main_menu_profile_item">Profile</string>
    <string name="main_menu_logout_item">Logout</string>
    <string name="main_menu_more_item">More</string>
    <string name="main_menu_notifications">Notifications</string>
    <string name="saved_to_favorites">Saved to Favorites</string>
    <string name="coffee_hot">coffee hot</string>
    <string name="coffee_cold">coffee_cold</string>
    <string name="back">back</string>
    <string name="favorite">favorite</string>
    <string name="buy_now">Buy Now</string>
    <string name="iced_coffee_sweet_heaven">Iced Coffee Sweet Heaven</string>
    <string name="double_espresso_with_condensed_milk_served_cold">Double espresso with condensed milk, served cold</string>
    <string name="drink_image">Drink Image</string>
    <string name="close">Close</string>
    <string name="best_seller_of_the_week_text">Best seller of the week</string>
    <string name="more_info_text">More info</string>
    <string name="more_info_arrow_icon">more_info_arrow</string>
    <string name="best_seller_placeholder_tv_text">Iced Coffee Sweet Heaven</string>
    <string name="best_seller_product_image">Best seller coffee</string>
    <string name="weeks_recommendation_text">This week’s recommendations</string>
    <string name="weeks_recommendation_image_description">Product Image</string>
    <string name="what_s_in_the_shop_text">What\'s in the shop</string>
    <string name="what_s_new_in_the_shop_content_description">What\'s new</string>
    <string name="introduction_our_new_menu">Introduction our new menu</string>
    <string name="details"><u>Details</u></string>
    <string name="hide_details">see less</string>
</resources>