<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:fadeScrollbars="true"
    android:scrollbarThumbVertical="@android:color/darker_gray"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".presentation.screens.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_best_seller"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="28dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="16dp">

        <ProgressBar
            android:id="@+id/best_seller_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/main"
            android:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_best_seller_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_best_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/best_seller_of_the_week_text"
                android:textColor="@color/main"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_best_seller_title"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/best_seller_placeholder_tv_text"
                android:textColor="@color/main"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_more_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_best_seller" />

            <TextView
                android:id="@+id/tv_more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/more_info_text"
                android:textColor="@color/main"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="17dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/more_info_arrow_icon"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@id/tv_more_info"
                app:layout_constraintStart_toEndOf="@id/tv_more_info" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/best_seller_iv"
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:contentDescription="@string/best_seller_product_image"
                android:scaleType="centerCrop"
                android:src="@drawable/best_seller_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedCornersImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/weeks_recommendation_text"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="24dp">

        <ProgressBar
            android:id="@+id/recommendation_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondary"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_week_recommendations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="false"
            android:visibility="gone" />
    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/what_s_in_the_shop_text"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_introduction_new_menu"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/what_s_new_in_the_shop_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/introducing_menu" />

        <View
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:background="@drawable/green_gradient" />

        <TextView
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/introduction_our_new_menu"
            android:textColor="@color/main"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>